# AtilaCalculatorSoftware

./: CMakeLists.txt
